--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: go
+
 install:
+  - export GOPATH=$HOME/gopath
+  - mkdir -p $GOPATH/src
   - go get code.google.com/p/go.net/html
   - go get code.google.com/p/go-html-transform/h5
-  - go get github.com/fern4lvarez/gonverter
+  - cd $GOPATH/src/code.google.com/p/go-html-transform
+  - hg checkout default
+  - go get github.com/fern4lvarez/go-metainspector
+  - cd $GOPATH/src/github.com/fern4lvarez/go-metainspector
   - go run examples/metainspector_example.go
